--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     text-decoration: none;
 }
 
@@ -7,44 +10,103 @@ header{
     margin-bottom: 250px;
 
     background-color:lavenderblush;
-    align-items: center;
+
+}
+
+a.navbar-brand{
+    margin: auto;
     display: flex;
-}
-
-.logo{
-    display: flex;
     align-items: center;
-}
+    position:relative;
+    
 
-.logo img{
-    margin-left: 12px;
-
-}
-.logo{
     font-size: 34px;
+    font-weight: 500;
     color: black;
     text-decoration: none;
+
 }
 
-nav{
+a.nav-link{
+    color: black;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 26px;
+}
+li.nav-item{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.navbar-nav{
+    width: 75%;
+}
+
+.collapse{
+    justify-content: center;
+}
+
+
+.menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
-nav a{
-    text-decoration: none;
-    color: black;
-    font-size: 24px;
-
-}
-
 .head-top .container .row{
     align-items: center;
     display: flex;
     justify-content: space-between;
 
 }
+
+.burger_icon{
+    width: 50px;
+    height: 32px;
+}
+
+
+
+@media screen and (max-width: 992px) {
+    .navbar{display: flex; 
+            justify-content: center;}
+            
+    .navbar-nav{width: 100%}
+    
+    a.navbar-brand{position:relative;
+                    left: 55px;
+    }
+
+
+    li.nav-item:hover {
+        background-color:#e0e0e0;
+    }
+}
+
+a.navbar-brand:hover, a.nav-link:hover {
+    color:#5e5e5e;
+}
+
+
+
+/* .nav-item .nav-link{
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+}
+
+.nav-item{
+    text-align: center;
+    align-items: center;
+}
+
+header .navbar .container .row{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+
+} */
 
 /* --------------------------------------------------- */
 
@@ -66,10 +128,10 @@ nav a{
 
 
 .offer-img img{
-    width: 750;
-    height: 450px;
+    width: 500px;
+    height: 300px;
     border-radius: 40px;
-    filter: brightness(15555%)
+    filter: brightness(3000%)
 }
 
 .offer-button{
@@ -78,13 +140,34 @@ nav a{
     margin-top: 30px;
     align-items: center;
     text-align: center;
+    text-decoration: none;
+}
+.offer-button a.offer-link:hover {
+    color:#5e5e5e;
+}
 
+div.col-6{
+    display: flex;
+    align-items: center;
 }
 
 .offer-button a{
     width: 300px;
     background-color: black;
     border-radius: 50px;
+}
+
+@media screen and (max-width: 1090px){
+    .offer-img img{
+        width: 450px;
+        height: 270px;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .offer-img img{
+        display: none;
+    }
 }
 
 /* --------------------------------------------------- */
@@ -97,22 +180,33 @@ nav a{
     margin-bottom: 20px;
 }
 
-.col-3  h2, .col-12 h1{
+.col-lg-4 .col-md-7 h2, .col-12 h1{
     color: black;
     text-align: center;
 }
 
-.col-3 p{
+.col-lg-4, .col-md-7 p{
     font-size: 20px;
     color: black;
     align-items: center;
     text-align: center;
 }
 
-.content2 .container .row{
+.col-md-7 p{
+    margin-bottom: 45px;
+}
+
+.content2 .container .row.lg{
     display: flex;
     justify-content: space-between;
 }
+
+.content2 .container .row.md{
+    display: flex;
+    justify-content: center;
+}
+
+
 
 /* --------------------------------------------------- */
 
@@ -141,11 +235,13 @@ footer .container .row{
 }
 
 .contacts p{
-    padding: 25px;
+    margin-top: 30px;
     text-align: center;
-    margin: 0;
     font-size: 18px;
     color: rgb(99, 99, 99)
+}
+.contacts p:nth-child(1){
+
 }
 
 .social{
@@ -159,7 +255,13 @@ footer .container .row{
     width: 75px;
     height: 75px;
 }
-@import "../node_modules/bootstrap/scss/functions";
+@media screen and (max-width: 992px) {
+    footer .row{
+        display: flex;
+        justify-content: center;
+    }
+
+}
 
 a:hover {
     color:#929292;
