--- a/css/style_task.css
+++ b/css/style_task.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    border: 0;
     box-sizing: border-box;
     text-decoration: none;
 }
@@ -17,13 +18,16 @@
     display: table;
     justify-content: center;
 
-    color: black;
+    color: #fff;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 200;
     text-align: center;
     font-family: 'Wix Madefor Display', sans-serif;
+    background-color: #0f0f0f;
 
-    border: 3px solid #000;
+    
+    padding: 20px;
+    border: 3px solid #fff;
 
 }
 
@@ -34,15 +38,20 @@
     justify-content: center;
     flex-direction: column;
 
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 20px;
 }
 
-.task .like,  .dislike{
+.like,  .dislike{
     width: 35px;
     height: 35px;
+    margin-right: 5px;
+    background-color: #fff;
 }
 
 .task div:not(:last-child){
-    border-right: 3px solid #000;
+    border-right: 1px solid #fff;
 }
 
 .task div{
@@ -79,6 +88,7 @@ div .task_menu{
 
 .container_tasks{
     margin: auto;
+    margin-top: 200px;
     align-items: center;
     max-width: 800px;
     display: flex;
@@ -88,4 +98,73 @@ div .task_menu{
 
 .tasks:last-child{
     margin-bottom: 128px;
+}
+
+.task_container{
+    max-width: 90%;
+    margin: auto;
+}
+
+.task_solving_field{
+
+    width: 100%;
+    height: 100%;
+}
+
+.row{
+    margin-bottom: 50px;
+}
+
+.task_solving_field{
+    border: solid 2px;
+}
+
+.row div{
+    justify-content: center;
+    font-size: 18px;
+}
+
+.task_about{
+    border: solid 2px;
+    border-radius: 5px;
+    padding: 40px;
+    padding-top: 60px;
+}
+
+.task_solving{
+    border: solid 2px;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.task_about-solving{
+    display: flex;
+    justify-content: space-between;
+}
+
+.task_about .col-6, .col-4{
+    display: flex;
+    justify-content: center;
+}
+
+form .submit_block{
+    display: flex;
+    justify-content: right;
+    margin-top: 10px;
+    
+}
+
+.select_pl{
+    margin-bottom: 15px;
+}
+
+.submit_block button.submit_task{
+    background-color: green;
+    border-radius: 20px;
+    padding: 15px;
+}
+
+.code_field{
+    border: solid 4px;
+    display: flex;
 }
