--- a/css/style_tasks.css
+++ b/css/style_tasks.css
@@ -17,6 +17,8 @@
 .task{
     display: table;
     justify-content: center;
+    align-items: center;
+    text-align: center;
 
     color: #fff;
     font-size: 18px;
