--- a/css/light_theme.css
+++ b/css/light_theme.css
@@ -2,7 +2,6 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: 'poppins', sans-serif;
 }
 
 section{
@@ -25,6 +24,9 @@ section{
     height: 500px;
     border: 3px solid #000000;
     border-radius: 20px;
+    margin-bottom: 150px;
+
+    font-family: 'poppins', sans-serif;
 }
 h2{
     text-align: center;
