--- a/css/style_add_new_task_form.css
+++ b/css/style_add_new_task_form.css
@@ -1,6 +1,4 @@
-.input-box textarea{
-    margin-top: 20px;
-}
+
 textarea:focus ~ label,
 textarea:valid ~ label  
 {
@@ -10,7 +8,7 @@ textarea:valid ~ label
 .add_new_task_form_box{
     display: flex;
     justify-content: center;
-
+    
     margin-bottom: 50px;
 }
 
@@ -22,4 +20,20 @@ textarea:valid ~ label
     padding: 50px;
     border: solid 3px #000;
     border-radius: 4px;
+}
+
+.status{
+    display: flex;
+    justify-content: center;
+
+    margin-top: 20px;
+
+    font-size: 18px;
+}
+.label_stat{
+    margin-bottom: 10px;
+}
+
+.input_stat{
+    margin-top: 15px;
 }
