--- a/css/style_task.css
+++ b/css/style_task.css
@@ -159,7 +159,7 @@ form .submit_block{
 }
 
 .submit_block button.submit_task{
-    background-color: green;
+    background-color: rgb(139, 255, 139);
     border-radius: 20px;
     padding: 15px;
 }
